Fixed text alignment on Contact page and updated copyright statements.

--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -1,5 +1,5 @@
 .contact {
-  text-align: center;
+  text-align: left;
   margin-bottom: 1rem;
 }
 
